ecmascript/parser/tests/test262-error-references/fail/d594faccae1187d7.js.stderr
error: TS1094
 --> $DIR/tests/test262-parser/fail/d594faccae1187d7.js:1:8
  |
1 | ({ set s() { } })
  |        ^

error: TS1056
 --> $DIR/tests/test262-parser/fail/d594faccae1187d7.js:1:8
  |
1 | ({ set s() { } })
  |        ^

